@@ -2,35 +2,46 @@ package com.manv.cooperative_maintenance_service.security;
 
 
 import com.manv.cooperative_maintenance_service.model.Person;
+import com.manv.cooperative_maintenance_service.model.Role;
+import jakarta.persistence.*;
+import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
+@Entity
+@Builder
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@Table(name = "users")
+public class User implements UserDetails {
+    @Id
+    @Column(name = "id")
+    @GeneratedValue (strategy = GenerationType.IDENTITY)
+    private Long id;
 
-public class PersonDetails implements UserDetails {
+    @Column(name = "username", unique = true, nullable = false)
+    private String username;
 
-    private final Person person;
+    @Column(name = "password", nullable = false)
+    private String password;
 
-    public PersonDetails(Person person) {
-        this.person = person;
-    }
+    @Column(name = "email", unique = true, nullable = false)
+    private String email;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "role", nullable = false)
+    private Role role;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority(person.getRole()));
-    }
-
-    @Override
-    public String getPassword() {
-        return this.person.getPassword();
-    }
-
-    @Override
-    public String getUsername() {
-        return this.person.getUsername();
+        return List.of(new SimpleGrantedAuthority(role.name()));
     }
 
     @Override
@@ -54,11 +65,6 @@ public class PersonDetails implements UserDetails {
     @Override
     public boolean isEnabled() {
         //todo
-
         return true;
-    }
-
-    public Person getPerson() {
-        return person;
     }
 }
